--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,9 @@
     text-transform: uppercase;
     color: #FFFFFF;
     opacity: 0;
-    text-shadow: 0 0 20px rgb(0,0,0);
+    /*text-shadow: 0 0 20px rgb(0,0,0);*/
+    background: rgba(105, 107, 123, 0.55) ;
+    box-shadow: 0 0 30px 10px rgba(105, 107, 123, 0.7);
 }
 .town-text .arch01 {
     animation: arckhitect01 2.5s ease;
@@ -118,10 +120,10 @@
     }
 }
 .buttonRoom img {
-   background: rgba(105, 107, 123, 0.6) ;
-   box-shadow: 0 0 20px 17px rgba(105, 107, 123, 0.6);
-   border-radius: 10px;
-   padding: 10px;
+    background: rgba(105, 107, 123, 0.55) ;
+    box-shadow: 0 0 30px 10px rgba(105, 107, 123, 0.7);
+   /*border-radius: 10px;*/
+   /*padding: 10px;*/
 }
 .room{
     background: white;
