--- a/size/160x600i/css/style.css
+++ b/size/160x600i/css/style.css
@@ -154,7 +154,7 @@
     animation-duration: 1s, 2s;
     animation-delay: 10.5s, 0s;
     animation-fill-mode: forwards, none;
-    animation-iteration-count: 1 , infinite;
+    animation-iteration-count: 1 , 13;
     animation-direction: normal, normal;
     animation-timing-function: ease, ease-in;
 
