--- a/styles.css
+++ b/styles.css
@@ -132,9 +132,11 @@ section {
     height: 90vh;
     background: #ecf0f7;
     margin: 0;
+    overflow: hidden;
 }
 .banner .container{
     display: flex;
+    z-index: 2;
 }
 .banner .container .image{
     display: flex;
@@ -181,8 +183,20 @@ section {
     font-weight: 400;
     margin-top: 16px;
 }
-
-
+.ico{
+    position: absolute;
+    width: 26px;
+    height: 26px;
+    top: 100%;
+    z-index: 1;
+    animation:spin 10s linear infinite;
+    opacity: .6;
+}
+@keyframes spin {
+    100% {
+        transform:rotate(360deg);
+    }
+}
 
 
 /* ABOUT */
@@ -400,4 +414,108 @@ footer{
     font-weight: 500;
     display: block;
     margin-bottom: 25px;
+}
+
+
+
+
+/* POPUP */
+
+.popup{
+    align-items: center;
+    background: rgba(0, 0, 0, .35);
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    left: 0;
+    padding: 0;
+    position: fixed;
+    right: 0;
+    top: 0;
+    z-index: 100;
+}
+.popup-content{
+    background-color: #fff;
+    border-radius: 12px;
+    margin: 20px;
+    max-width: 400px;
+    width: 100%;
+    padding: 16px 24px;
+    position: relative;
+}
+
+.popup-content .title{
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.popup-content .close{
+    position: absolute;
+    right: 12px;
+    top: 16px;
+    cursor: pointer;
+    width: 16px;
+    height: 16px;
+    background-image: url("./img/close.svg");
+}
+.callback_form{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.callback_form label{
+    width: 100%;
+    margin-bottom: 20px;
+    position: relative;
+}
+.callback_form label span{
+    display: block;
+    font-size: 14px;
+    margin-bottom: 6px;
+}
+.callback_form label input{
+    border-radius: 10px;
+    border: 1px solid #abafbb;
+    box-shadow: 0 0 0 0 rgba(101, 164, 246, 0.5);
+    transition: 0.3s;
+    padding: 12px 16px;
+    width: 100%;
+    font-size: 16px;
+}
+.callback_form label input:focus {
+     border-color: #65a4f6;
+     box-shadow: 0 0 0 3px rgba(101, 164, 246, 0.5);
+ }
+.callback_form label input:focus-visible {
+     outline: none;
+ }
+.callback_form label input::placeholder {
+     color: #737a8e;
+ }
+.callback_form label span.error{
+    font-size: 12px;
+    padding-left: 6px;
+    color: #b91313;
+    position: absolute;
+    top: 101%;
+}
+.callback_form button{
+    color: white;
+    display: block;
+    background-color: var(--orange);
+    padding: 16px 20px;
+    cursor: pointer;
+    text-align: center;
+    border-radius: 12px;
+    font-size: 16px;
+    margin-top: 20px;
+    transition: background-color .3s;
+    border: none;
+    outline: none;
+    min-width: 200px;
+}
+.callback_form button:hover{
+    background-color: #f05118;
 }
