--- a/styles.css
+++ b/styles.css
@@ -87,8 +87,11 @@ header .logo{
     background: transparent;
     border-radius: 0 0 12px 12px;
     margin-right: auto;
-    padding: 16px 20px;
+    padding: 16px 20px 16px 0;
     transition:background-color .3s;
+}
+header .logo .menu_link{
+    margin: 0;
 }
 header .logo img{
     width: 200px;
