--- a/styles.css
+++ b/styles.css
@@ -380,6 +380,7 @@ section {
 
 .composition{
     height: 90vh;
+    margin-top: 20px;
     margin-bottom: 0;
     overflow: hidden;
 }
@@ -534,7 +535,7 @@ section {
 /* FOOTER */
 
 footer{
-    background: #06336e;
+    background: #363946;
     color: white;
     padding: 64px 0;
 }
@@ -650,7 +651,7 @@ footer{
 .callback_form button{
     color: white;
     display: block;
-    background-color: var(--orange);
+    background-color: var(--blue);
     padding: 16px 20px;
     cursor: pointer;
     text-align: center;
@@ -663,7 +664,7 @@ footer{
     min-width: 200px;
 }
 .callback_form button:hover{
-    background-color: #f05118;
+    background-color: #2573db;
 }
 
 
