--- a/styles.css
+++ b/styles.css
@@ -324,6 +324,9 @@ section {
     z-index: 1;
     opacity: .4;
 }
+img.banner_video{
+
+}
 
 @media (max-width: 1280px) {
     .banner .container {
